Bug 158332 - Areas from the context menu remain after exiting the presentation (VCL gtk3, DE kde and Xfce)
Summary: Areas from the context menu remain after exiting the presentation (VCL gtk3, ...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.2.0.0.alpha0+
Hardware: All Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:24.8.0 target:24.2.0.0.beta2 t...
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2023-11-23 10:09 UTC by Vladislav Tarakanov
Modified: 2023-12-22 08:56 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Check with KDE (102.75 KB, image/png)
2023-11-23 10:12 UTC, Vladislav Tarakanov
Details
Check with Xfce (87.33 KB, image/png)
2023-11-23 10:12 UTC, Vladislav Tarakanov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Vladislav Tarakanov 2023-11-23 10:09:55 UTC
Description:
When the right mouse button is pressed on the screen that appears after the presentation is completed (with the inscription "Click to exit presentation..."), the area on the screen that should have been in place of the context menu will remain. The problem was reproduced with the VCL plugin with the KDE and XFce desktop environments (on Debian 12). The problem is not reproducible with DE Gnome.

This problem was noticed only with the gtk3 plugin; in kf5, right-clicking the mouse does not complete the demo. On Windows, RMB also does not end the demo.

Should this behavior be treated as a LO error or should this problem be fixed in DE?

Steps to Reproduce:
1. Run Impress with gtk3 plugin and KDE desktop environment 
2. Start the demonstration, go to the screen with "Click to exit presentation..."
3. Press RMB

Actual Results:
The demonstration ends and the area on the screen remains in the place where the context menu should have been displayed

Expected Results:
The demo ends without displaying the context menu area, or the demo does not end but the context menu is displayed


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 13eb599d8b0f81e4024f4aa2a6dd8b074f80a9df
CPU threads: 12; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: ru-RU (ru_RU.UTF-8); UI: en-US
Calc: CL threaded
Comment 1 Vladislav Tarakanov 2023-11-23 10:12:21 UTC
Created attachment 190987 [details]
Check with KDE
Comment 2 Vladislav Tarakanov 2023-11-23 10:12:36 UTC
Created attachment 190988 [details]
Check with Xfce
Comment 3 Buovjaga 2023-12-19 16:22:35 UTC
In earlier versions, right-clicking did not exit the presentation. The change to the current behaviour happened with e872d77cc0e5dc1571df4559101d0b80e40097c2
weld slidecontextmenu

Bibisected with linux-64-7.2

I see in the console:
(soffice:110512): Gtk-CRITICAL **: 18:10:05.806: _gtk_widget_captured_event: assertion 'WIDGET_REALIZED_FOR_EVENT (widget, event)' failed

Exiting LibreOffice leaves it hanging and I have to kill it with Ctrl-C and it leaves behind an instdir/.lock file.
Comment 4 Caolán McNamara 2023-12-20 16:39:23 UTC
This comes from back at: https://gitlab.gnome.org/GNOME/gtk/-/issues/1785 where the workaround for that causes this problem since the commit bisected above
Comment 5 Commit Notification 2023-12-20 20:22:06 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8f07984471add9cb2e7b4fddcfaa505cc7d508fe

Resolves: tdf#158332 'fake' keystroke exits presentation

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Caolán McNamara 2023-12-20 20:23:07 UTC
done in trunk, backports to 24.2 and 7.6 in gerrit
Comment 7 Commit Notification 2023-12-20 21:15:16 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/39f21446c0f0e9872f8871ab88233f5cbaa5eacc

Resolves: tdf#158332 'fake' keystroke exits presentation

It will be available in 24.2.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2023-12-20 21:15:20 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/0a438f285f3b5310f5d7b63f0a3c6a857be360f2

Resolves: tdf#158332 'fake' keystroke exits presentation

It will be available in 7.6.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Buovjaga 2023-12-22 08:56:56 UTC
Verified, thanks.