Resolves: tdf#158332 'fake' keystroke exits presentation

the fake keystroke is to make tooltips go away before menus which
used to be a problem versions of gtk3 < 3.24 that resultsed in no
menus appearing. Our min is still 3.18 so technically we need to retain
that until bumping past that as baseline.

Change-Id: I94aa309665c50c8ca310285d1e691030f443934a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/161022
Tested-by: Jenkins
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>