sd/source/ui/slideshow/showwin.cxx
@@ -97,6 +97,12 @@ void ShowWindow::dispose()
 
 void ShowWindow::KeyInput(const KeyEvent& rKEvt)
 {
+    // Ignore workaround of https://gitlab.gnome.org/GNOME/gtk/issues/1785
+    // See calls to GtkSalFrame::makeFakeKeyPress (Fixed in GTK 3.24)
+    bool bFakeKeyPress = rKEvt.GetKeyCode().GetFullCode() == 0;
+    if (bFakeKeyPress)
+        return;
+
     bool bReturn = false;
 
     if( SHOWWINDOWMODE_PREVIEW == meShowWindowMode )
@@ -126,11 +132,7 @@ void ShowWindow::KeyInput(const KeyEvent& rKEvt)
     }
     else if( SHOWWINDOWMODE_BLANK == meShowWindowMode )
     {
-        bool bFakeKeyPress = rKEvt.GetKeyCode().GetFullCode() == 0;
-        // Ignore workaround of https://gitlab.gnome.org/GNOME/gtk/issues/1785
-        // See calls to GtkSalFrame::makeFakeKeyPress (Fixed in GTK 2.34)
-        if (!bFakeKeyPress)
-            RestartShow();
+        RestartShow();
         bReturn = true;
     }
     else if( SHOWWINDOWMODE_PAUSE == meShowWindowMode )
